dev: fix issues with details and heading spacing

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -296,6 +296,16 @@ code {
     font-size: 16px;
 }
 
+// Details
+
+details.details-interruption {
+  background-color: inherit;
+
+  summary {
+    padding-left: 0;
+  }
+}
+
 details {
   background-color: #ebebeb;
   padding-top: 10px;
